@@ -1,5 +1,6 @@
 Changes in 1.8.1 (not yet released)
 
+ - Fix issue in CAnimatedMeshSceneNode::clone which cause crash. (reported and fixed by luthyr)
  - Fix compiling errors for c++ builder (thx @Greatwolf for many patches and @cfanderek for reminding)
  - Initialized IColladaMeshWriter::GeometryWriting which was uninitialized.
  - Fix linker trouble with irr::core::equalsByUl when compiling Irrlicht as managed code (thx @  Memorial76 for a report + testcase)
